@@ -1,11 +1,8 @@
 package twilightforest.entity.ai.goal;
 
-import net.minecraft.tags.ItemTags;
 import net.minecraft.world.entity.ai.goal.Goal;
 import net.minecraft.world.entity.ai.navigation.PathNavigation;
 import net.minecraft.world.entity.item.ItemEntity;
-import net.minecraft.world.item.DyeColor;
-import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.gameevent.GameEvent;
 import org.jetbrains.annotations.Nullable;
 import twilightforest.entity.passive.QuestRam;
@@ -20,7 +17,6 @@ public class QuestRamEatWoolGoal extends Goal {
 	@Nullable
 	private ItemEntity targetItem = null;
 
-	@SuppressWarnings("this-escape")
 	public QuestRamEatWoolGoal(QuestRam ram) {
 		this.ram = ram;
 		this.navigation = ram.getNavigation();
@@ -33,20 +29,12 @@ public class QuestRamEatWoolGoal extends Goal {
 		//we want to check if the item is valid and not in the air, that the ram can see it, and that its actually wool
 		List<ItemEntity> items = this.ram.level().getEntitiesOfClass(ItemEntity.class, this.ram.getBoundingBox().inflate(16.0D), item ->
 			(item.onGround() || item.isInWater()) && item.isAlive() &&
-				!item.getItem().isEmpty() && this.ram.hasLineOfSight(item) && this.isTempting(item.getItem()));
+				!item.getItem().isEmpty() && this.ram.hasLineOfSight(item) && this.ram.isItemTempting(item.getItem()));
 		items.sort(Comparator.comparingDouble(this.ram::distanceToSqr));
 
 		if (!items.isEmpty()) {
-			this.targetItem = items.get(0);
+			this.targetItem = items.getFirst();
 			return true;
-		}
-		return false;
-	}
-
-	protected boolean isTempting(ItemStack stack) {
-		if (stack.is(ItemTags.WOOL)) {
-			DyeColor color = this.ram.guessColor(stack);
-			return color != null && !this.ram.isColorPresent(color);
 		}
 		return false;
 	}
@@ -54,7 +42,7 @@ public class QuestRamEatWoolGoal extends Goal {
 	@Override
 	public boolean canContinueToUse() {
 		return this.ram.isAlive() && !this.navigation.isStuck() && !this.navigation.isDone() &&
-			this.targetItem != null && this.targetItem.isAlive() && this.isTempting(this.targetItem.getItem());
+			this.targetItem != null && this.targetItem.isAlive() && this.ram.isItemTempting(this.targetItem.getItem());
 	}
 
 	@Override
@@ -70,7 +58,7 @@ public class QuestRamEatWoolGoal extends Goal {
 	public void tick() {
 		super.tick();
 		if (!this.ram.level().isClientSide()) {
-			if (this.targetItem != null && this.isTempting(this.targetItem.getItem())) {
+			if (this.targetItem != null && this.ram.isItemTempting(this.targetItem.getItem())) {
 				this.ram.getLookControl().setLookAt(this.targetItem, this.ram.getMaxHeadYRot() + 20, this.ram.getMaxHeadXRot());
 				if (this.ram.distanceToSqr(this.targetItem.position()) < 6.25D && this.ram.tryAccept(this.targetItem.getItem())) {
 					//consume the wool
